# quick-fastapi-medium

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  logging.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 20260312_0001_init_tables.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/local/: kustomization.yaml  migration-job.yaml  patch-configmap.yaml  patch-deployment.yaml  patch-service.yaml  remove-hpa.yaml  remove-ingress.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: create_admin.py  init_db.py
src/: main.py
src/api/: deps.py
src/api/v1/: api.py
src/core/: config.py  events.py  exceptions.py  logging.py  resources.py  security.py
src/crud/: base.py  file.py  post.py  user.py
src/infra/: __init__.py
src/middleware/: request_id.py  timing.py
src/models/: __init__.py  base.py  file.py  post.py  user.py
src/redis/: cache.py  client.py  keys.py  lock.py  rate_limiter.py  session.py
src/schemas/: admin.py  auth.py  base.py  file.py  post.py  task.py  user.py
src/services/: admin.py  auth.py  base.py  file.py  post.py  task.py  user.py
src/tasks/: email.py  export.py  notifications.py  report.py
src/utils/: datetime.py  pagination.py  validators.py
tests/: conftest.py
(+23 files in other folders)
